# libbinaryio

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml
include/binaryio/: binaryreader.hpp  binarywriter.hpp  util.hpp
src/: CMakeLists.txt  binaryreader.cpp
